--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="#" class="navbar-logo">Semmy <span>Andrianto Suihana</span></a>
+    <a href="#" class="navbar-logo">Semmy <span>Suihana</span></a>
     <div class="navbar-nav">
         <a href="#home" style="margin: 7px;">Home</a>
         <a href="#about" style="margin: 7px;">Tentang Kami</a>
